--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,8 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "flag-icon-css": "^4.1.7",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.6.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
