--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,9 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "nodemailer": "^6.9.2"
+    "nodemailer": "^6.9.2",
+    "passport": "^0.6.0",
+    "passport-google-oauth": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
