--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@popperjs/core": "^2.11.7",
+    "@react-oauth/google": "^0.11.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "flag-icon-css": "^4.1.7",
