--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js "
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -21,7 +21,8 @@
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.2",
     "passport": "^0.6.0",
-    "passport-google-oauth": "^2.0.0"
+    "passport-google-oauth": "^2.0.0",
+    "socket.io": "^4.6.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
