Fixed chat bug where offers weren't being stored properly

--- a/.gitignore
+++ b/.gitignore
@@ -22,4 +22,4 @@ ehthumbs.db
 .vscode/*
 
 # Added so that in the future we may uncomment the socket.io server code without changing the remote repository
-server.js
+./server.js
